--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,3 +95,47 @@ tr:hover {
     transition: opacity 0.5s;
     z-index: 1000;
 }
+
+@media (max-width: 2560px) {
+    table {
+        font-size: 20px; 
+    }
+}
+
+@media (max-width: 1440px) {
+    table {
+        font-size: 18px;
+        width: 85%;
+    }
+    th, td {
+        padding: 12px;
+    }
+}
+
+@media (max-width: 768px) {
+    table {
+        width: 700px; 
+        font-size: 16px;
+        overflow-x: auto;
+        display: block;
+        white-space: nowrap;
+    }
+
+    th, td {
+        padding: 10px;
+        min-width: 100px; 
+    }
+}
+
+@media (max-width: 320px) {
+    table {
+        width: 300px; 
+        font-size: 14px;
+        overflow-x: auto;
+    }
+
+    th, td {
+        padding: 8px;
+        font-size: 12px; 
+    }
+}
