Lab5 was implemented; all labs were united and tested successfully

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,10 @@ body {
     margin: 0;
     padding: 20px;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
@@ -403,5 +407,97 @@ tr:hover {
     color: #333;
   }
   .hidden {
+    
     display: none;
+}
+.form-container1 {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    margin: 20px 0;
+}
+.form-container1 {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="number"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="button"] {
+    width: 100%;
+    padding: 10px;
+    background: linear-gradient(90deg, #007BFF, #0056b3); /* Синій градієнт */
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+input[type="button"]:hover {
+    background-color: #0056b3;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th {
+    background-color: #0056b3; /* Зелений колір для заголовків */
+    color: white;
+    padding: 10px;
+    text-align: left;
+}
+td {
+    padding: 10px;
+    border: 1px solid #ddd; /* Сірий колір для рамки */
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2; /* Світло-сірий колір для парних рядків */
+}
+tr:hover {
+    background-color: #ddd; /* Темніший сірий колір для підсвічування при наведенні */
+}
+input[type="number"] {
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+button {
+    background-color: #0056b3; /* Зелений колір для кнопок */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #0056b3;  /* Темніший зелений при наведенні */
 }
